--- a/theme/hackbar-panel.html
+++ b/theme/hackbar-panel.html
@@ -12,7 +12,7 @@
 				<div class="collapse navbar-collapse">
 					<ul class="nav navbar-nav">
 						<li class="dropdown">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Encryption <span class="caret"></span></a>
+							<a href="#">Encryption <span class="caret"></span></a>
 							<ul class="dropdown-menu">
 								<li><a href="#" id='md5_btn'><img src="img/encryption.png"/> MD5</a></li>
 								<li><a href="#" id='sha1_btn'><img src="img/encryption.png"/> SHA-1</a></li>
@@ -21,7 +21,7 @@
 							</ul>
 						</li>
 						<li class="dropdown">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Encoding <span class="caret"></span></a>
+							<a href="#">Encoding <span class="caret"></span></a>
 							<ul class="dropdown-menu">
 								<li><a href="#" id='base64_encode_btn'><img src="img/uue.png"/> Base64 En<u>c</u>ode</a></li>
 								<li><a href="#" id='base64_decode_btn'><img src="img/uud.png"/> Base64 Decode</a></li>
@@ -32,24 +32,24 @@
 							</ul>
 						</li>
 						<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Other <span class="caret"></span></a>
+						<a href="#">Other <span class="caret"></span></a>
 						<ul class="dropdown-menu">
 							<li><a href="#" id='jsonify_btn'><img src="img/addslashes.png"/> Jsonify</a></li>
 							</li>
 						</ul>
 					</ul>	
 					<ul class="nav navbar-nav navbar-right">
-						<p class="navbar-text">HackBar v1.0</p>
+						<p class="navbar-text">HackBar v1.1.1</p>
 					</ul>
 				</div><!-- /.navbar-collapse -->
 			</nav>
 			<div class="row">
-				<div class="col-md-2 col-lg-1 col-xs-3 col-sm-3">
+				<div class="col-md-2 col-lg-2 col-xs-3 col-sm-3">
 					<button class="btn btn-sm btn-block btn-default" id="load_url_btn"><img src="img/load.png"/> Lo<u>a</u>d URL</button>
 					<button class="btn btn-sm btn-block btn-default" id="split_url_btn"><img src="img/split.gif"/> S<u>p</u>lit URL</button>
 					<button class="btn btn-sm btn-block btn-default" id="execute_btn"><img src="img/web.png"/> E<u>x</u>ecute</button>
 				</div>
-				<div class="col-md-10 col-lg-11 col-xs-9 col-sm-9">
+				<div class="col-md-10 col-lg-10 col-xs-9 col-sm-9">
 					<div class="form-group">
 						<textarea id="url_field" class="form-control"></textarea>
 					</div>
@@ -70,10 +70,10 @@
 				</div>
 			</div>
 			<div class="row" id="post_data_block">
-				<div class="col-md-2 col-lg-1 col-xs-3 col-sm-3">
+				<div class="col-md-2 col-lg-2 col-xs-3 col-sm-3">
 					Post Data
 				</div>
-				<div class="col-md-10 col-lg-11 col-xs-9 col-sm-9">
+				<div class="col-md-10 col-lg-10 col-xs-9 col-sm-9">
 					<div class="form-group">
 						<textarea id="post_data_field" class="form-control"></textarea>
 					</div>
@@ -81,7 +81,7 @@
 				</div>
 			</div>
 			<div class="row" id="referrer_block">
-				<div class="col-md-10 col-lg-11 col-xs-9 col-sm-9 col-md-offset-1 col-lg-offset-1 col-xs-offset-3 col-sm-offset-2">
+				<div class="col-md-10 col-lg-10 col-xs-9 col-sm-9 col-md-offset-1 col-lg-offset-2 col-xs-offset-3 col-sm-offset-2">
 					<div class="form-group">
 						<div class="input-group">
 							<div class="input-group-addon"><strong>R</strong></div>
@@ -91,7 +91,7 @@
 				</div>
 			</div>
 			<div class="row" id="user_agent_block">
-				<div class="col-md-10 col-lg-11 col-xs-9 col-sm-9 col-md-offset-1 col-lg-offset-1 col-xs-offset-3 col-sm-offset-2">
+				<div class="col-md-10 col-lg-10 col-xs-9 col-sm-9 col-md-offset-1 col-lg-offset-2 col-xs-offset-3 col-sm-offset-2">
 					<div class="form-group">
 						<div class="input-group">
 							<div class="input-group-addon"><strong>U</strong></div>
@@ -101,7 +101,7 @@
 				</div>
 			</div>
 			<div class="row" id="cookie_block">
-				<div class="col-md-10 col-lg-11 col-xs-9 col-sm-9 col-md-offset-1 col-lg-offset-1 col-xs-offset-3 col-sm-offset-2">
+				<div class="col-md-10 col-lg-10 col-xs-9 col-sm-9 col-md-offset-1 col-lg-offset-2 col-xs-offset-3 col-sm-offset-2">
 					<div class="form-group">
 						<div class="input-group">
 							<div class="input-group-addon"><strong>C</strong></div>
