--- a/theme/hackbar-panel.html
+++ b/theme/hackbar-panel.html
@@ -32,14 +32,16 @@
 							</ul>
 						</li>
 						<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Other <span class="caret"></span></a>
-						<ul class="dropdown-menu">
-							<li><a href="#" id='jsonify_btn'><img src="img/addslashes.png"/> Jsonify</a></li>
-							</li>
-						</ul>
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Other <span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<li><a href="#" id='jsonify_btn'><img src="img/addslashes.png"/> Jsonify</a></li>
+								<li><a href="#" id='uppercase_btn'><img src="img/uppercase.png"/> Uppercase</a></li>
+								<li><a href="#" id='lowercase_btn'><img src="img/lowercase.png"/> Lowercase</a></li>
+							</ul>
+						</li>
 					</ul>	
 					<ul class="nav navbar-nav navbar-right">
-						<p class="navbar-text">HackBar v1.1.2</p>
+						<p class="navbar-text">HackBar v1</p>
 					</ul>
 				</div><!-- /.navbar-collapse -->
 			</nav>
@@ -112,6 +114,7 @@
 			</div>
 
 		</div>
+		<script src="js/jquery-3.2.1.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
 		<script src="js/Encrypt.js"></script>
 		<script src="js/hackbar-panel.js"></script>
